[metadata]
name = csci513-miniproject2
author = Anand Balakrishnan
version = 0.1.1
description = Mini-Project 2: Perception-based Adaptive Cruise Control in CARLA
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research

[options]
zip_safe = True
packages = find:
python_requires = ~= 3.8
install_requires =
  carla==0.9.15
  numpy
  matplotlib
  scikit-learn
  keras
  tensorflow
  pygame
  scipy
  scikit-image
  pandas
  rtamt @ https://github.com/nickovic/rtamt/tarball/ba2bc2d8a48d5c6bbd836904b7e421fb26d7e384
  antlr4-python3-runtime

